# server-manager

./: .dockerignore  .env.example  .env.secrets.example  .gitignore  .gitmodules  LICENSE  README.md  README.zh-CN.md  compose.override.yaml  compose.yaml
.claude/rules/: english-code-generate.md  notation-conventions.md  python-env.md  python-quality-checks.md  typst-math-spacing.md  typst-syntax.md
.cursor/rules/: english-code-generate.mdc  notation-conventions.mdc  python-env.mdc  python-quality-checks.mdc  shell-script-help.mdc  typst-math-spacing.mdc  (+1 more)
account_prepare/: README.md  pyproject.toml  registration_columns.yaml
account_prepare/src/account_prepare/: __init__.py  columns.py  export.py  gsad_db.py  ledger.py  mail.py  notify.py  passwords.py  paths.py  prepare.py  reconcile.py  snapshot.py
account_prepare/tests/: conftest.py  test_columns.py  test_export.py  test_gsad_db.py  test_ledger.py  test_mail.py  test_passwords.py  test_snapshot.py
data_example/: agents-with-psk.csv  server_examples.csv  test.csv
dockers/: .env.example  compose.dev.yaml  compose.edge-external.yaml  compose.prod-local.yaml  compose.prod.yaml  compose.yaml
docs/: agent-network.md  agent-network.zh-CN.md  agent-psk.md  agent-psk.zh-CN.md  backup.md  backup.zh-CN.md  dev.md  dev.zh-CN.md  external-traefik.md  info.md  info.zh-CN.md  local-prod.md  local-prod.zh-CN.md
utils/: backup-postgres.sh  create-prod-admin.sh  deploy-prod.sh  derive-agent-psk-batch.sh  derive-agent-psk.sh  dev-up.sh  gsad-compose.sh  install-backup-timer.sh  preflight.sh  register-server.sh  secret.sh
(+21 files in other folders)
