[project]
name = "account-prepare"
version = "0.1.0"
description = "GSAD + NetBird account preparation from registration spreadsheet"
requires-python = ">=3.10"
dependencies = [
    "netbird-manage",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "openpyxl>=3.1.0",
]

[project.scripts]
prepare-accounts = "account_prepare.prepare:main"
reconcile-accounts = "account_prepare.reconcile:main"
notify-accounts = "account_prepare.notify:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
    "ty>=0.0.1a6",
]

[tool.uv.sources]
netbird-manage = { path = "../netbird-manage" }

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/account_prepare"]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ty.src]
include = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
